--- a/pages/paquetes.html
+++ b/pages/paquetes.html
@@ -7,34 +7,45 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Paquetes</title>
 </head>
 <body>
-    <header class="navbar">
-        <!-- logo zoologico -->
-        <a href="../index.html">
-            <img src="../Imagenes/Zoológico y Safari Guadalajara 1.png" alt="logo zoologico de Guadalajara">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../pages/animales.html">Animales</a></li>
-                <li><a href="../pages/atracciones.html">Atracciones</a></li>
-                <li><a href="../pages/paquetes.html">Paquetes</a></li>
-                <li><a href="../pages/mapa.html">Mapa</a></li>
-                <li><a href="../pages/noticias.html">Noticias</a></li>
-                <li><a href="../pages/mas.html">Más</a></li>
-                <li><a href="../pages/boletos.html">Boletos</a></li>
+    <header class="navbar navbar-expand-lg bg-light bg-opacity-10 fixed-top position-absolute">
+        <div class="container">
+          <a class="navbar-brand" href="../index.html">
+            <img class="w-75" src="../Imagenes/Zoológico y Safari Guadalajara 1.png" alt="logo zoologico de guadalajara">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <nav class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link text-white text-nav" href="../pages/animales.html">Animales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white text-nav" href="../pages/atracciones.html">Atracciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="../pages/paquetes.html">Paquetes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white text-nav" href="../pages/mapa.html">Mapa</a>
+              </li>
+            
             </ul>
         </nav>
-    </header>  
+        </div>
+    </header> 
 
     <main>
         <div>
-            <img src="../Imagenes/paquetes/imgpaquetes.png" alt="" style="width: 100%;">
+            <img src="../Imagenes/paquetes/imgpaquetes.png" alt="entrada al zoologico donde al bajar unas escaleras se muestran las esculturas de monos" class="banner">
         </div>
 
-        <section style="margin: 30px 70px 30px 70px;">
+        <section class="contenedor">
             <h1>Paquetes.</h1>
             <h3 style="margin-top: 30px; margin-bottom: 20px;">EL ZOOLÓGICO CUENTA CON UNA AMPLIA GAMA DE SERVICIOS, TALES COMO:</h3>
             <p>El Zoológico Guadalajara cuenta con teléferico, tren panorámico, restaurantes, fuentes de sodas, renta de sillas de ruedas, renta de carriolas, primeros auxilios, red wifi gratuita, estacionamiento, foto montajes, tatuajes, inmersión con tiburones, eventos especiales.
@@ -109,5 +120,6 @@
             </div>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
