final de entrega 2

--- a/index.html
+++ b/index.html
@@ -46,21 +46,30 @@
 
 <main>
     <div class="banner-index">
-    <img src="./Imagenes/ZOO-Hero.jpg" alt="guacamaya volando en la selva" 
+    <img src="./Imagenes/ZOO-Hero.jpg" class="banner-img" alt="guacamaya volando en la selva" 
     class="banner">
     </div>
 
     <section class="contenedor">
+
+
 <!-- Novedades -->
         <h2>Novedades.</h2>
 
+    <section class="grid">
+        <div class="div-tigre">
+            <img src="./Imagenes/Tiger.png" class="tigre" alt="Tigre">
+        </div>
+
     <section class="wrap">
         <div class="bloquenov">
-        <img src="./Imagenes/navidad en el zoologico de guadalajara.png" alt="escultura de simios localizada en la entrada al zoologico de guadalajara">
+            <div class="img-nov">
+            <img src="./Imagenes/navidad en el zoologico de guadalajara.png" alt="escultura de simios localizada en la entrada al zoologico de guadalajara">
+            </div>
             <div class="Novedades">
             <h3>Navidad en el zoológico Guadalajara</h3>
             <p>
-            Temporada para disfrutar en familia y el Zoológico Guadalajara es una muy buena opción en la ciudad. Nuestro horario es de lunes a domingo de 9 de la mañana a 6 hasta el domingo 7 de enero 2024. El domingo 24 de Diciembre abierto de 9 de la mañana a 2 de la tarde....
+            Temporada para disfrutar en familia y el Zoológico Guadalajara es una muy buena opción en la ciudad. Nuestro horario es de lunes a domingo de 9 de la mañana a 6 hasta el domingo 7 de enero 2024.
             </p>
             <button class="button-standard">Ver más</button>
             </div>
@@ -82,7 +91,7 @@
             <div class="Novedades">
             <h3>Interacciones con animales</h3>
             <p>
-            Ahora puedes estar cerca de diferentes animales como jirafas, venados, loros, manatíes, hasta con las adorables capibaras a los que vas a conocer muy de cerca, aprender más de ellos y algunos, hasta los puedes alimentar, en nuestras interacciones con animales.
+            Ahora puedes estar cerca de diferentes animales como jirafas, venados, loros, manatíes, hasta con las adorables capibaras a los que vas a conocer muy de cerca, aprender más de ellos y algunos, hasta los puedes alimentar...
             </p>
             <button class="button-standard">Ver más</button>
             </div>
@@ -100,7 +109,7 @@
         </div>
 
     </section>
-
+    </section>
 
 <!-- Galeria -->
         <h2>Galería.</h2>
