--- a/pages/animales.html
+++ b/pages/animales.html
@@ -59,105 +59,105 @@
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/capibara.jpg" alt="">
+        <img src="../Imagenes/animales/capibara.jpg" alt="capibara">
         <h3>Capibara</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/leon.png" alt="">
+        <img src="../Imagenes/animales/leon.png" alt="leon">
         <h3>León africano</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/avestruz.png" alt="">
+        <img src="../Imagenes/animales/avestruz.png" alt="avestruz">
         <h3>Avestruz</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/serpiente.png" alt="">
+        <img src="../Imagenes/animales/serpiente.png" alt="serpiente">
         <h3>Serpiente de cascabel</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/puma.png" alt="">
+        <img src="../Imagenes/animales/puma.png" alt="puma">
         <h3>Puma</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/chachalaca.png" alt="">
+        <img src="../Imagenes/animales/chachalaca.png" alt="chacalaca">
         <h3>Chachalaca</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/loro.png" alt="">
+        <img src="../Imagenes/animales/loro.png" alt="loro">
         <h3>Loro</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/escorpion.png" alt="">
+        <img src="../Imagenes/animales/escorpion.png" alt="escorpion">
         <h3>Escorpión (reptil)</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/aguila.png" alt="">
+        <img src="../Imagenes/animales/aguila.png" alt="aguila">
         <h3>Águila real</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/tigre.png" alt="">
+        <img src="../Imagenes/animales/tigre.png" alt="tigre">
         <h3>Tigre de bengala</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/elefante.png" alt="">
+        <img src="../Imagenes/animales/elefante.png" alt="elefante">
         <h3>Elefante africano</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/jaguar.png" alt="">
+        <img src="../Imagenes/animales/jaguar.png" alt="jaguar">
         <h3>Jaguar</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/mono.png" alt="">
+        <img src="../Imagenes/animales/mono.png" alt="mono">
         <h3>Mono araña</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/bufalo.png" alt="">
+        <img src="../Imagenes/animales/bufalo.png" alt="bufalo">
         <h3>Búfalo cafre</h3>
         </a>
         </div>
 
         <div class="div-animales">
         <a href="">
-        <img src="../Imagenes/animales/coyote.png" alt="">
+        <img src="../Imagenes/animales/coyote.png" alt="coyote">
         <h3>Coyote</h3>
         </a>
         </div>
