--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -57,7 +57,7 @@
             </div>
 
             <div style="margin-top: 20px;">
-            <img src="../Imagenes/mapa/mapaimproved.jpeg" alt="" style="width: 100%;">
+            <img src="../Imagenes/mapa/mapaimproved.jpeg" alt="mapa del zoologico de guadalajara" style="width: 100%;">
             </div>
         </section>
 
