--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="navbar navbar-expand-lg bg-body-secondary bg-opacity-10 fixed-top position-absolute">
         <div class="container">
           <a class="navbar-brand" href="./index.html">
-            <img class="w-75" src="./Imagenes/Zoológico y Safari Guadalajara 1.png" alt="logo zoologico de guadalajara">
+            <img class="w-75" src="./Imagenes/Zoológico-y-Safari-Guadalajara1.png" alt="logo zoologico de guadalajara">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,8 +46,7 @@
 
 <main>
     <div class="banner-index">
-    <img src="./Imagenes/ZOO-Hero.jpg" class="banner-img" alt="guacamaya volando en la selva" 
-    class="banner">
+    <img src="./Imagenes/ZOO-Hero.jpg" class="banner-img" alt="guacamaya volando en la selva">
     </div>
 
     <section class="contenedor">
@@ -64,7 +63,7 @@
     <section class="wrap">
         <div class="bloquenov">
             <div class="img-nov">
-            <img src="./Imagenes/navidad en el zoologico de guadalajara.png" alt="escultura de simios localizada en la entrada al zoologico de guadalajara">
+            <img src="./Imagenes/navidad-en-el-zoologico-de-guadalajara.png" alt="escultura de simios localizada en la entrada al zoologico de guadalajara">
             </div>
             <div class="Novedades">
             <h3>Navidad en el zoológico Guadalajara</h3>
@@ -76,7 +75,7 @@
         </div>
         
         <div class="bloquenov">
-        <img src="./Imagenes/navidad de los animales.png" alt="lemur jugando con pelotas, con un poco de nieve en el suelo">
+        <img src="./Imagenes/navidad-de-los-animales.png" alt="lemur jugando con pelotas, con un poco de nieve en el suelo">
             <div class="Novedades">
             <h3>Navidad de los animales</h3>
             <p>
@@ -87,7 +86,7 @@
         </div>
     
         <div class="bloquenov">
-        <img src="./Imagenes/interaccion con los animales.png" alt="mujer con su hijo dandole de comer a 1 capibara">
+        <img src="./Imagenes/interaccionconlosanimales.png" alt="mujer con su hijo dandole de comer a 1 capibara">
             <div class="Novedades">
             <h3>Interacciones con animales</h3>
             <p>
@@ -98,7 +97,7 @@
         </div>
 
         <div class="bloquenov">
-        <img src="./Imagenes/ya viviste la experiencia.png" alt="3 personas obervando al tiburon del acuario">
+        <img src="./Imagenes/ya-viviste-la-experiencia.png" alt="3 personas obervando al tiburon del acuario">
             <div class="Novedades">
             <h3>¿YA VIVISTE LA EXPERIENCIA DE SUMERGIRTE EN EL TANQUE DE TIBURONES?</h3>
             <p>
@@ -116,10 +115,10 @@
     </section>
 
     <section class="galeria">
-        <img src="./Imagenes/Rectangle 12.png" alt="mujer dando su exposicion en atraccion de safari">
-        <img src="./Imagenes/Rectangle 11.png" alt="joven acariciando la cabeza de jirafa">
-        <img src="./Imagenes/Rectangle 13.png" alt="familia visitando el resptilario">
-        <img src="./Imagenes/Rectangle 14.png" alt="2 niñas disfrutando del teleferico del sky zoo">
+        <img src="./Imagenes/Rectangle12.png" alt="mujer dando su exposicion en atraccion de safari">
+        <img src="./Imagenes/Rectangle11.png" alt="joven acariciando la cabeza de jirafa">
+        <img src="./Imagenes/Rectangle13.png" alt="familia visitando el resptilario">
+        <img src="./Imagenes/Rectangle14.png" alt="2 niñas disfrutando del teleferico del sky zoo">
     </section>
 
 
@@ -166,7 +165,7 @@
 
 <!-- Plataforma de transparencia -->
     <div class="transparencia">
-        <img src="./Imagenes/plataforma nacional de transparencia.png" alt="Plataforma Nacional de transparencia">
+        <img src="./Imagenes/plataforma-nacional-de-transparencia.png" alt="Plataforma Nacional de transparencia">
     </div>
 
 </section>
