--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -15,7 +15,7 @@
     <header class="navbar navbar-expand-lg bg-light bg-opacity-10 fixed-top position-absolute">
         <div class="container">
           <a class="navbar-brand" href="../index.html">
-            <img class="w-75" src="../Imagenes/Zoológico y Safari Guadalajara 1.png" alt="logo zoologico de guadalajara">
+            <img class="w-75" src="../Imagenes/Zoológico-y-Safari-Guadalajara1.png" alt="logo zoologico de guadalajara">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,13 +50,13 @@
             <h1>Mapa</h1>
         
             <div>
-                <h3 style="margin-top: 20px;">Visítanos en:</h3>
+                <h3>Visítanos en:</h3>
                 <p>
                 Av. Paseo del Zoológico No. 600 y Calzada Independencia No. 4510. Col. Huentitán el Alto, C.P. 44390 en Guadalajara, Jalisco.
                 </p>
             </div>
 
-            <div style="margin-top: 20px;">
+            <div>
             <img src="../Imagenes/mapa/mapaimproved.jpeg" alt="mapa del zoologico de guadalajara" style="width: 100%;">
             </div>
         </section>
