--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -15,7 +15,7 @@
     <header class="navbar navbar-expand-lg bg-light bg-opacity-10 fixed-top position-absolute">
         <div class="container">
           <a class="navbar-brand" href="../index.html">
-            <img class="w-75" src="../Imagenes/Zoológico y Safari Guadalajara 1.png" alt="logo zoologico de guadalajara">
+            <img class="w-75" src="../Imagenes/Zoológico-y-Safari-Guadalajara1.png" alt="logo zoologico de guadalajara">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
