responsive web mobile desktop

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 <!-- Novedades -->
-        <h2>Novedades.</h2>
+        <h1>Novedades.</h1>
 
     <section class="grid">
         <div class="div-tigre">
@@ -215,10 +215,10 @@
         </div>
 
         <div class="footer">
-            <strong>Escríbenos</strong>
-            ZOOGDL@ZOOGUADALAJARA.COM.MX
+            <p><strong>Escríbenos</strong>
+            ZOOGDL@ZOOGUADALAJARA.COM.MX</p>
             <strong>Llámanos</strong>
-            33 36 74 44 88
+            <p>33 36 74 44 88</p>
         </div>
     </section>
 </footer>
