--- a/pages/animales.html
+++ b/pages/animales.html
@@ -210,10 +210,11 @@
             </div>
 
             <div class="footer">
-            <strong>Escríbenos</strong>
+            <p><strong>Escríbenos</strong>
             ZOOGDL@ZOOGUADALAJARA.COM.MX
             <strong>Llámanos</strong>
             33 36 74 44 88
+            </p>
         </div>
     </section>
 </footer>
