--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -51,112 +51,112 @@
         <section class="wrap">
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/acuario.png" alt="personas observando las grandes peceras del acuario" style="width: 300px;">
+            <img src="../Imagenes/atracciones/acuario.png" alt="personas observando las grandes peceras del acuario">
             <h3>Acuario</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/safari.png" alt="camion transportando gente al safari" style="width: 300px;">
+            <img src="../Imagenes/atracciones/safari.png" alt="camion transportando gente al safari">
             <h3>Safari</h3>
             </a>
             </div>
     
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/skyzoo.png" alt="teleferico lleno de gente" style="width: 300px;">
+            <img src="../Imagenes/atracciones/skyzoo.png" alt="teleferico lleno de gente">
             <h3>Sky Zoo</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/antartida.png" alt="pingüinos en su habitat" style="width: 300px;">
+            <img src="../Imagenes/atracciones/antartida.png" alt="pingüinos en su habitat">
             <h3>Antártida</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/amazonia.png" alt="logo de amazonia, paraiso guacamaya, enfrente de un zoom a plumas de perico" style="width: 300px;">
+            <img src="../Imagenes/atracciones/amazonia.png" alt="logo de amazonia, paraiso guacamaya, enfrente de un zoom a plumas de perico">
             <h3>Amazonia</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/cia.png" alt="cia central de investigacion animal" style="width: 300px;">
+            <img src="../Imagenes/atracciones/cia.png" alt="cia central de investigacion animal">
             <h3>CIA</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/herpetario.png" alt="herpetario, zoologico y safari guadalajara, detras una serpiente" style="width: 300px;">
+            <img src="../Imagenes/atracciones/herpetario.png" alt="herpetario, zoologico y safari guadalajara, detras una serpiente">
             <h3>Herpetario</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/interaccion.png" alt="madre e hijo pasando el tiempo con un capibara" style="width: 300px;">
+            <img src="../Imagenes/atracciones/interaccion.png" alt="madre e hijo pasando el tiempo con un capibara">
             <h3>Interacciones con animales</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/kalimantan.png" alt="kalimantan, el palacio de los orangutanes" style="width: 300px;">
+            <img src="../Imagenes/atracciones/kalimantan.png" alt="kalimantan, el palacio de los orangutanes">
             <h3>Kalimantan</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/michilia.png" alt=" oso en su habitat " style="width: 300px;">
+            <img src="../Imagenes/atracciones/michilia.png" alt=" oso en su habitat ">
             <h3>Michilia</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/monkeyland.png" alt="mokeyland, detras una imagen de madre e hijo mono" style="width: 300px;">
+            <img src="../Imagenes/atracciones/monkeyland.png" alt="mokeyland, detras una imagen de madre e hijo mono">
             <h3>Monkeyland</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/puertomanati.png" alt="puerto manati y un manati" style="width: 300px;">
+            <img src="../Imagenes/atracciones/puertomanati.png" alt="puerto manati y un manati">
             <h3>Puerto manatí</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/rancho.png" alt="rancho veterinario, y unos niños, 1 caballo, un cerdo y 1 gallo" style="width: 300px;">
+            <img src="../Imagenes/atracciones/rancho.png" alt="rancho veterinario, y unos niños, 1 caballo, un cerdo y 1 gallo">
             <h3>Rancho</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/selva.png" alt="selva tropical, detras la imagen de un jaguar" style="width: 300px;">
+            <img src="../Imagenes/atracciones/selva.png" alt="selva tropical, detras la imagen de un jaguar">
             <h3>Selva</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/tren.png" alt="un tren transportando gente por el zoologico" style="width: 300px;">
+            <img src="../Imagenes/atracciones/tren.png" alt="un tren transportando gente por el zoologico">
             <h3>Tren</h3>
             </a>
             </div>
 
             <div class="div-atracciones">
             <a href="">
-            <img src="../Imagenes/atracciones/villaaust.png" alt="canguros" style="width: 300px;">
+            <img src="../Imagenes/atracciones/villaaust.png" alt="canguros">
             <h3>Villa australiana</h3>
             </a>
             </div>
@@ -210,10 +210,10 @@
                 </div>
     
                 <div class="footer">
-                <strong>Escríbenos</strong>
+                <p><strong>Escríbenos</strong>
                 ZOOGDL@ZOOGUADALAJARA.COM.MX
                 <strong>Llámanos</strong>
-                33 36 74 44 88
+                33 36 74 44 88</p>
             </div>
         </section>
     </footer>
