--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -12,6 +12,7 @@
     <title>Mapa</title>
 </head>
 <body>
+  <!-- navbar -->
     <header class="navbar navbar-expand-lg bg-light bg-opacity-10 fixed-top position-absolute">
         <div class="container">
           <a class="navbar-brand" href="../index.html">
@@ -41,7 +42,8 @@
     </header>
 
     <main>
-        
+    
+        <!-- banner -->
         <div>
             <img src="../Imagenes/mapa/imgmapa.png" alt="vista a un paisaje con montañas llenas de vegetacion" class="banner">
         </div>
