--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+<!-- Navbar -->
     <header class="navbar navbar-expand-lg bg-body-secondary bg-opacity-10 fixed-top position-absolute">
         <div class="container">
           <a class="navbar-brand" href="./index.html">
@@ -44,6 +46,7 @@
         </div>
     </header>
 
+<!-- Banner principal -->
 <main>
     <div class="banner-index">
     <img src="./Imagenes/ZOO-Hero.jpg" class="banner-img" alt="guacamaya volando en la selva">
@@ -171,6 +174,8 @@
 </section>
 </main>
 
+
+<!-- Footer -->
 <footer>
     <section>
         <div class="footer">
