--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Mapa</title>
+    <meta name="description" content="Visítanos en Av. Paseo del Zoológico No. 600 y Calzada Independencia No. 4510, Col. Huentitán el Alto, C.P. 44390, Guadalajara, Jalisco. No te pierdas, consulta nuestro mapa del zoológico.">
+    <meta name="keywords" content="mapa, sanitarios, tiendas, sodas, cajero, silla de ruedas, estacionamiento, sky zoo">
 </head>
 <body>
   <!-- navbar -->
@@ -49,7 +51,7 @@
         </div>
 
         <section class="contenedor">
-            <h1>Mapa</h1>
+            <h1>Mapa<span style="color: rgb(230, 97, 60)">.</span></h1>
         
             <div>
                 <h3>Visítanos en:</h3>
