--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Zoo Guadalajara</title>
+    <meta name="description" content="El Zoológico se ubica en el Norte de la ciudad de Guadalajara, Jalisco, en el Parque Natural Huentitán.">
+    <meta name="keywords" content="zoo, zoologico, Guadalajara, noticias, preguntas">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -56,7 +58,7 @@
 
 
 <!-- Novedades -->
-        <h1>Novedades.</h1>
+        <h1>Novedades<span style="color: rgb(230, 97, 60)">.</span></h1>
 
     <section class="grid">
         <div class="div-tigre">
@@ -114,7 +116,7 @@
     </section>
 
 <!-- Galeria -->
-        <h2>Galería.</h2>
+        <h2>Galería<span style="color: rgb(230, 97, 60)">.</span></h2>
     </section>
 
     <section class="galeria">
@@ -127,7 +129,7 @@
 
 <!-- Preguntas -->
     <section class="contenedor">
-        <h2>Preguntas.</h2>
+        <h2>Preguntas<span style="color: rgb(230, 97, 60)">.</span></h2>
 
     <section class="wrap">
         <div class="preguntas">
