--- a/pages/animales.html
+++ b/pages/animales.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Animales</title>
+    <meta name="description" content="Descubre la increíble variedad de animales en nuestro zoológico, desde conejos y capibaras hasta majestuosos tigres y elefantes.">
+    <meta name="keywords" content="conejo, capibara, leon, avestruz, serpiente, puma, loro, aguila, tigre, elefante, jaguar, mono, coyote">
 </head>
 
 
@@ -47,7 +49,7 @@
         <img src="../Imagenes/imganimales.png" alt="guacamaya" class="banner">
     </div>
     <section class="contenedor">
-        <h1>Animales.</h1>
+        <h1>Animales<span style="color: rgb(230, 97, 60)">.</span></h1>
 
     <section class="wrap">
         <div class="div-animales">
