--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Atracciones</title>
+    <meta name="description" content="Explora todas las atracciones de nuestro zoológico: acuarios, safari, Sky Zoo, y experiencias de interacción con animales.">
+    <meta name="keywords" content="acuario, safari, sky zoo, antartida, amazonia, interaccion con animales, monkeyland, manati, rancho, selva, tren, villa australiana">
 </head>
 <body>
     <header class="navbar navbar-expand-lg bg-light bg-opacity-10 fixed-top position-absolute">
@@ -47,7 +49,7 @@
         </div>
     
         <section class="contenedor">
-            <h1>Atracciones.</h1>
+            <h1>Atracciones<span style="color: rgb(230, 97, 60)">.</span></h1>
       
       <!-- atracciones -->
         <section class="wrap">
