--- a/pages/paquetes.html
+++ b/pages/paquetes.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>Paquetes</title>
+    <meta name="description" content="Descubre nuestros paquetes especiales para grupos grandes: escolares, fiestas, campamentos, y eventos. Disfruta al máximo tu visita al zoológico.">
+    <meta name="keywords" content="turistico, empresarial, escolar, fiesta, cursos de verano, campamento, eventos">
 </head>
 <body>
     <header class="navbar navbar-expand-lg bg-light bg-opacity-10 fixed-top position-absolute">
@@ -47,7 +49,7 @@
         </div>
 
       <!-- titulo -->
-        <h1 class="contenedor">Paquetes.</h1>
+        <h1 class="contenedor">Paquetes<span style="color: rgb(230, 97, 60)">.</span></h1>
 
 
         <section class="contenedor grid-paquetes" >
