entrega-final-final

--- a/pages/animales.html
+++ b/pages/animales.html
@@ -9,6 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link href="css/hover.css" rel="stylesheet" media="all">
+
     <title>Animales</title>
     <meta name="description" content="Descubre la increíble variedad de animales en nuestro zoológico, desde conejos y capibaras hasta majestuosos tigres y elefantes.">
     <meta name="keywords" content="conejo, capibara, leon, avestruz, serpiente, puma, loro, aguila, tigre, elefante, jaguar, mono, coyote">
@@ -52,117 +54,117 @@
         <h1>Animales<span style="color: rgb(230, 97, 60)">.</span></h1>
 
     <section class="wrap">
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/conejo.png" alt="conejo">
+        <img src="../Imagenes/animales/conejo.png" alt="close up a conejo sobre zacate">
         <h3>Conejo</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/capibara.jpg" alt="capibara">
+        <img src="../Imagenes/animales/capibara.jpg" alt="close up a capibara sobre zacate">
         <h3>Capibara</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/leon.png" alt="leon">
+        <img src="../Imagenes/animales/leon.png" alt="leon acostado en hierba">
         <h3>León africano</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/avestruz.png" alt="avestruz">
+        <img src="../Imagenes/animales/avestruz.png" alt="avestruz en su habitat del zoo">
         <h3>Avestruz</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/serpiente.png" alt="serpiente">
+        <img src="../Imagenes/animales/serpiente.png" alt="close up a serpiente sobre tierra">
         <h3>Serpiente de cascabel</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/puma.png" alt="puma">
+        <img src="../Imagenes/animales/puma.png" alt="close up a la cara de un puma">
         <h3>Puma</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/chachalaca.png" alt="chacalaca">
+        <img src="../Imagenes/animales/chachalaca.png" alt="close up a una chacalaca en su jaula">
         <h3>Chachalaca</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/loro.png" alt="loro">
+        <img src="../Imagenes/animales/loro.png" alt="close up a un loro sobre una rama">
         <h3>Loro</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/escorpion.png" alt="escorpion">
+        <img src="../Imagenes/animales/escorpion.png" alt="close up al reptil escorpion descansando en una rama de un arbol">
         <h3>Escorpión (reptil)</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <div class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/aguila.png" alt="aguila">
+        <img src="../Imagenes/animales/aguila.png" alt="aguila descansando sobre una roca">
         <h3>Águila real</h3>
         </a>
         </div>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/tigre.png" alt="tigre">
+        <img src="../Imagenes/animales/tigre.png" alt="close up a la cara de un tigre adentro de un lago">
         <h3>Tigre de bengala</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/elefante.png" alt="elefante">
+        <img src="../Imagenes/animales/elefante.png" alt="close up a a la cara de un elefante">
         <h3>Elefante africano</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/jaguar.png" alt="jaguar">
+        <img src="../Imagenes/animales/jaguar.png" alt="close up a la cara de un jaguar">
         <h3>Jaguar</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/mono.png" alt="mono">
+        <img src="../Imagenes/animales/mono.png" alt="close up a la cara de un mono con cara de sorprendido">
         <h3>Mono araña</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/bufalo.png" alt="bufalo">
+        <img src="../Imagenes/animales/bufalo.png" alt="bufalo de pie sobre maleza">
         <h3>Búfalo cafre</h3>
         </a>
-        </div>
+        </button>
 
-        <div class="div-animales">
+        <button class="div-animales hvr-grow">
         <a href="">
-        <img src="../Imagenes/animales/coyote.png" alt="coyote">
+        <img src="../Imagenes/animales/coyote.png" alt="coyote de pie sobre hierba">
         <h3>Coyote</h3>
         </a>
-        </div>
+        </button>
 
     </section>
     </section>
