--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <article class="bloquenov">
         <img src="./Imagenes/ya-viviste-la-experiencia.png" alt="3 personas obervando al tiburon del acuario">
             <div class="Novedades">
-            <h3>¿YA VIVISTE LA EXPERIENCIA DE SUMERGIRTE EN EL TANQUE DE TIBURONES?</h3>
+            <h3>¿Ya viviste la experiencia de sumergirte en el tanque de tiburones?</h3>
             <p>
             Descubre la adrenalina de estar cerca pero muy cerca del depredador más feroz de los océanos y vive la experiencia de sumergirte en el tanque de tiburones del Acuario...
             </p>
